Cleaning working tree

--- a/html/log.html
+++ b/html/log.html
@@ -7,10 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle Log</title>
     <script src="/javascript/log.js"></script>
+    <script src="/popup.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
 
 <body>
+    <div class="button_container">
+        <button id="settings_button" class="green_button">Open settings</button>
+        <button id="whitelist_button" class="green_button">Filter lists</button>
+        <button id="log_button" class="green_button">Log</button>
+        <button id="unit_button" class="green_button">Units</button>
+        <button id="instructions_button" class="green_button">Instructions</button>
+        <button id="key_check_button" class="green_button">Key check</button>
+    </div>
     <div class="center-container">
         <h1>This is your battle log</h1>
         <h2>Unknown time and result means the extension couldn't get a battle closure, this generally means that the
@@ -23,7 +32,7 @@
             <button id="deleteLogButton" class="green_button">Delete log</button>
             <button id="exportLogButton" class="green_button">Export Log</button>
             <div class="file-input-container">
-                <label for="log-file-input" class="green_button">Import your log from file</label>
+                <label for="log-file-input" class="green_button">Import your log from file (.json)</label>
                 <input type="file" id="log-file-input">
             </div>
         </div>
