--- a/html/whitelist.html
+++ b/html/whitelist.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Priority lists</title>
     <script src="/javascript/whitelist.js"></script>
+    <script src="/popup.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
 
 <body>
+    <div class="button_container">
+        <button id="settings_button" class="green_button">Open settings</button>
+        <button id="whitelist_button" class="green_button">Filter lists</button>
+        <button id="log_button" class="green_button">Log</button>
+        <button id="unit_button" class="green_button">Units</button>
+        <button id="instructions_button" class="green_button">Instructions</button>
+        <button id="key_check_button" class="green_button">Key check</button>
+    </div>
     <div class="bulleted-list">
         <h1>Set you priority captains lists</h1>
         <ul>
