--- a/settings.html
+++ b/settings.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="settings.js"></script>
+    <script src="/popup.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/settings_styles.css">
 </head>
 <main class="main"></main>
 
 <body>
+    <div class="button_container">
+        <button id="settings_button" class="green_button">Open settings</button>
+        <button id="whitelist_button" class="green_button">Filter lists</button>
+        <button id="log_button" class="green_button">Log</button>
+        <button id="unit_button" class="green_button">Units</button>
+        <button id="instructions_button" class="green_button">Instructions</button>
+        <button id="key_check_button" class="green_button">Key check</button>
+    </div>
     <h1 style="font-size: xx-large;">Set your preferences here</h1>
     <table>
         <tbody>
@@ -40,8 +49,8 @@
                 </td>
             </tr>
             <tr>
-                <td><label for="userIdleTimeInput">Maximum idle time in minutes (Default is 15 minutes)<input type="number"
-                            id="userIdleTimeInput"></label></td>
+                <td><label for="userIdleTimeInput">Maximum idle time in minutes (Default is 15 minutes)<input
+                            type="number" id="userIdleTimeInput"></label></td>
                 <td><button id="idleTimeButton"
                         style="width: fit-content; height: fit-content; text-align: center; background-color: #5fa695;">Set</button>
                 </td>
