--- a/html/check_keys.html
+++ b/html/check_keys.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Key checker</title>
     <script src="/javascript/key_check.js"></script>
+    <script src="/popup.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
 
 <body>
+    <div class="button_container">
+        <button id="settings_button" class="green_button">Open settings</button>
+        <button id="whitelist_button" class="green_button">Filter lists</button>
+        <button id="log_button" class="green_button">Log</button>
+        <button id="unit_button" class="green_button">Units</button>
+        <button id="instructions_button" class="green_button">Instructions</button>
+        <button id="key_check_button" class="green_button">Key check</button>
+    </div>
     <h1>This page is used for debugging purposes</h1>
     <h4>Enter a key to check:</h4>
     <input type="text" id="key_input">
