--- a/html/check_keys.html
+++ b/html/check_keys.html
@@ -21,6 +21,7 @@
     </div>
     <h1>This page is used for debugging purposes</h1>
     <h4>Enter a key to check:</h4>
+    <pre id="keys_container" style="font-size: large;"></pre>
     <input type="text" id="key_input">
     <button id="check_button" style="margin-right: 300px;">Check Key</button>
     <button id="delete_button">Delete Key</button>
