--- a/settings.html
+++ b/settings.html
@@ -78,6 +78,9 @@
                         battlepass</label></td>
             </tr>
             <tr>
+                <td><label for="logSwitch"><input type="checkbox" id="logSwitch"> Enable logging for rewards and leaderboard results</label></td>
+            </tr>	
+            <tr>
                 <td><label for="equipSwitch"><input type="checkbox" id="equipSwitch"> Equip captain skins</label></td>
                 <td><label for="equipNoDiamondSwitch"><input type="checkbox" id="equipNoDiamondSwitch"> Only equip skin
                         if not diamond</label></td>
@@ -161,6 +164,7 @@
                 <td><label><input type="radio" name="potion" value="1"> Potions at 45</label></td>
                 <td><label><input type="radio" name="potion" value="2"> Potions at 100</label></td>
             </tr>
+			
             <tr>
                 <td><label for="dungeonSlotSwitch" class="x"><input type="checkbox" id="dungeonSlotSwitch" class="x" Use
                             slot 0 for dungeons</label></td>
