added scroll to bottom button to log, key checker, and units
also added title to settings and modified positioning of navigation buttons to align between all pages

--- a/html/units.html
+++ b/html/units.html
@@ -400,7 +400,7 @@
         <button id="getUnits_button" class="green_button" style="background-color: red;">Reload your
             units</button>
     </div>
-    <button id="scrollBtn" title="Go to top">Up</button>
+    <button id="scrollBtn" title="Go to top">↑</button>
 </body>
 
 </html>
