--- a/html/check_keys.html
+++ b/html/check_keys.html
@@ -26,6 +26,8 @@
     <button id="check_button" style="margin-right: 300px;">Check Key</button>
     <button id="delete_button">Delete Key</button>
     <pre id="data_container"></pre>
+    <button id="scrollBtnUp" title="Go to top">↑</button>
+    <button id="scrollBtnDown" title="Go to bottom">↓</button>
 </body>
 
 </html>
