--- a/html/log.html
+++ b/html/log.html
@@ -1,4 +1,3 @@
-<!-- options.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -40,7 +39,7 @@
         <div class="counter-container"></div>
     </div>
     <div id="dataContainer"></div><br><br>
-    <button id="scrollBtn" title="Go to top">Up</button>
+    <button id="scrollBtn" title="Go to top">↑</button>
 </body>
 
 </html>
