Added importer and exporter for each setting set

--- a/html/units.html
+++ b/html/units.html
@@ -399,6 +399,11 @@
         <h2>It takes a few seconds to load the units from the server, don't spam click the button</h2>
         <button id="getUnits_button" class="green_button" style="background-color: red;">Reload your
             units</button>
+        <button id="exportUnits_button" class="green_button">Export your units to a file</button>
+        <div class="file-input-container">
+            <label for="loadUnitFileBtn" class="green_button">Import units from file</label>
+            <input type="file" id="loadUnitFileBtn" style="display: none;">
+        </div>
     </div>
     <button id="scrollBtn" title="Go to top">↑</button>
 </body>
