--- a/html/whitelist.html
+++ b/html/whitelist.html
@@ -52,9 +52,9 @@
         <h1>Import and export your settings here</h1>
         <h2>Export and import your settings, captains lists and log here<br>WARNING: IMPORTING OVERWRITES THE CURRENT
             DATA</h2>
-        <button id="exportButton" class="green_button">Export your settings to file</button>
+        <button id="exportButton" class="green_button">Export your lists to file</button>
         <div class="file-input-container">
-            <label for="settings-file-input" class="green_button">Import your settings from file</label>
+            <label for="settings-file-input" class="green_button">Import your lists from file</label>
             <input type="file" id="settings-file-input">
         </div>
     </div>
