Added unit shuffler

--- a/settings.html
+++ b/settings.html
@@ -127,6 +127,9 @@
                                                         type="checkbox" id="logSwitch"> Enable logging for
                                                 rewards and
                                                 leaderboard results</label></td>
+                                <td><label for="shuffleSwitch"
+                                                title="Randomly shuffle your units so the placement varies."><input
+                                                        type="checkbox" id="shuffleSwitch">Shuffle units</label></td>
                         </tr>
                         <tr>
                                 <td><label for="equipSwitch" title="Equip captain skins for the extra loyalty."><input
@@ -402,12 +405,15 @@
         </table>
         <div class="bottom_container">
                 <div class="inline_block">
-                        <button id="exportSettingsToFileBtn" class="green_button">Export your units to a file</button>
+                        <button id="exportSettingsToFileBtn" class="green_button">Export your settings to a
+                                file</button>
                         <div class="file-input-container inline_block">
-                                <label for="importSettingsToFileBtn" class="green_button">Import units from file</label>
+                                <label for="importSettingsToFileBtn" class="green_button">Import settings from
+                                        file</label>
                                 <input type="file" id="importSettingsToFileBtn" style="display: none;">
                         </div>
                 </div>
         </div>
 </body>
+
 </html>
