Display log for raidId, get how many units user wants to place. Cleaning working tree

--- a/settings.html
+++ b/settings.html
@@ -127,6 +127,10 @@
                                                         type="checkbox" id="logSwitch"> Enable logging for
                                                 rewards and
                                                 leaderboard results</label></td>
+                                <td><label for="raidIdSwitch"
+                                                title="Display additional log information on the battle log"><input
+                                                        type="checkbox" id="raidIdSwitch"> Enable logging for the
+                                                raidID</label></td>
                                 <td><label for="shuffleSwitch"
                                                 title="Randomly shuffle your units so the placement varies."><input
                                                         type="checkbox" id="shuffleSwitch">Shuffle units</label></td>
@@ -310,8 +314,8 @@
                                                 simultaneously as one will overwrite the other.</label></td>
                         </tr>
                         <tr>
-                                <td><label for="levelSwitch"><input type="checkbox" id="levelSwitch"> <s>Use LEVEL
-                                                        set</s></label>
+                                <td><label for="levelSwitch"><input type="checkbox" id="levelSwitch">Use LEVEL
+                                                set</label>
                                 </td>
                                 <td><label for="veInput">Very Easy<input type="number" id="veInput"></label></td>
                                 <td><button id="veButton"
@@ -352,8 +356,8 @@
 
                         </tr>
                         <tr>
-                                <td><label for="chestSwitch"><input type="checkbox" id="chestSwitch"><s> Use CHEST
-                                                        set</s></label>
+                                <td><label for="chestSwitch"><input type="checkbox" id="chestSwitch"> Use CHEST
+                                                set</label>
                                 </td>
                                 <td><label for="bronzeInput">Bronze<input type="number" id="bronzeInput"></label></td>
                                 <td><button id="bronzeButton"
