Added skin throttler

--- a/settings.html
+++ b/settings.html
@@ -147,8 +147,8 @@
                                                 if not diamond</label></td>
                                 <td><label for="moreSkinsSwitch"
                                                 title="If there's skinned unit on the battle already, the extension won't actively try to place a skinned unit, specially useful if you only have a single skin of the captain"><input
-                                                        type="checkbox" id="moreSkinsSwitch"><s>One skin is
-                                                        enough.</s></label>
+                                                        type="checkbox" id="moreSkinsSwitch">One skin is
+                                                        enough.</label>
                                 </td>
                         </tr>
                         <tr>
