--- a/html/log.html
+++ b/html/log.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battle Log</title>
     <script src="/javascript/log.js"></script>
+    <script src="/javascript/shared_scripts.js"></script>
     <script src="/popup.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
 </head>
@@ -25,7 +26,8 @@
             battle was manually abandoned or the reward chest manually collected.</h2>
         <h2>Duration is the time in minutes from when placement started up to the time the captain handed out the chest
             rewards</h2>
-            <h2>If the initial chest is a loyalty chest, but the awarded chest is a Gold Chest it means you maxed out on that chest type.</h2>
+        <h2>If the initial chest is a loyalty chest, but the awarded chest is a Gold Chest it means you maxed out on
+            that chest type.</h2>
         <div>
             <button id="updateLogButton" class="green_button">Update Log</button>
             <button id="deleteLogButton" class="green_button">Delete log</button>
@@ -33,6 +35,10 @@
             <div class="file-input-container">
                 <label for="log-file-input" class="green_button">Import your log from file (.json)</label>
                 <input type="file" id="log-file-input">
+            </div>
+            <div>
+                <label for="logSwitch"><input type="checkbox" id="logSwitch">Show rewards and leaderboard</label>
+                <label for="raidIdSwitch"><input type="checkbox" id="raidIdSwitch">Show raid ID</label>
             </div>
         </div>
         <h3>Loyalty Chest counter</h3>
