--- a/html/units.html
+++ b/html/units.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unit priority</title>
     <script src="/units_handler.js"></script>
+    <script src="/javascript/shared_scripts.js"></script>
     <script src="/javascript/quick_set.js"></script>
     <script src="/popup.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
