--- a/settings.html
+++ b/settings.html
@@ -125,10 +125,6 @@
                                 <td><label for="shuffleSwitch"
                                                 title="Randomly shuffle your units so the placement varies."><input
                                                         type="checkbox" id="shuffleSwitch">Shuffle units</label></td>
-                                <td></td>
-                                <td></td>
-                        </tr>
-                        <tr>
                                 <td><label for="equipSwitch" title="Equip captain skins for the extra loyalty."><input
                                                         type="checkbox" id="equipSwitch"> Equip
                                                 captain
@@ -138,15 +134,14 @@
                                                         type="checkbox" id="equipNoDiamondSwitch">
                                                 Only equip skin
                                                 if not diamond</label></td>
+                        </tr>
+                        <tr>
                                 <td><label for="moreSkinsSwitch"
                                                 title="If there's skinned unit on the battle already, the extension won't actively try to place a skinned unit, specially useful if you only have a single skin of the captain"><input
                                                         type="checkbox" id="moreSkinsSwitch">One skin is
                                                 enough.</label>
                                 </td>
-                        </tr>
-                        <tr>
-                                <td>
-                                        <label for="completeQuests"
+                                <td><label for="completeQuests"
                                                 title="Actively try to place units that can complete the current set of quests. Not efficient on set markers. This will disable priority lists and enable all unit rarity classes so the auto quester has authority."><input
                                                         type="checkbox" id="completeQuests">Complete
                                                 campaign related
@@ -155,16 +150,19 @@
                                 <td><label for="priorityListSwitch"
                                                 title="When enable the unit list will be sorted based on the unit priority list."><input
                                                         type="checkbox" id="priorityListSwitch">Enable unit priority
-                                                list
+                                                list</label></td>
+                        </tr>
+                        <tr>
                                 <td><label for="commonSwitch"><input type="checkbox" id="commonSwitch"> Use common
                                                 units</label></td>
                                 <td><label for="uncommonSwitch"><input type="checkbox" id="uncommonSwitch"> Use uncommon
                                                 units</label>
                                 </td>
-                        </tr>
-                        <tr>
                                 <td><label for="rareSwitch"><input type="checkbox" id="rareSwitch"> Use rare
                                                 units</label></td>
+                        </tr>
+                        <tr>
+
                                 <td><label for="legendarySwitch"><input type="checkbox" id="legendarySwitch"> Use
                                                 legendary
                                                 units</label></td>
@@ -172,12 +170,12 @@
                                                         type="checkbox" id="campaignSwitch"> Unlimited
                                                 Campaign</label>
                                 </td>
-
-                        </tr>
-                        <tr>
                                 <td><label for="duelSwitch" title="Place more than one unit in duels"><input
                                                         type="checkbox" id="duelSwitch"> Unlimited
                                                 duels</label></td>
+                        </tr>
+                        <tr>
+
                                 <td><label for="clashSwitch" title="Place more than one unit in clashes"><input
                                                         type="checkbox" id="clashSwitch"> Unlimited
                                                 clashes</label></td>
@@ -185,19 +183,30 @@
                                                         type="checkbox" id="dungeonSwitch"> Unlimited
                                                 dungeons</label>
                                 </td>
-                        </tr>
-                        <tr>
                                 <td><label for="dungeonLevelSwitch"
                                                 title="Some captains request units with a maximum level, this prevents units with a higher level from being placed on dungeons."><input
                                                         type="checkbox" id="dungeonLevelSwitch">
                                                 Place units with a
                                                 maximum custom level on dungeons</label></td>
+                        </tr>
+                        <tr>
+
                                 <td><label for="dungeonPlaceAnywaySwitch"
                                                 title="This bypasses the flag marker and places the unit regardless on dungeons."><input
                                                         type="checkbox" id="dungeonPlaceAnywaySwitch"> Allow
                                                 Place Anyway on flag markers in Dungeons (must turn on custom level on
                                                 dungeons) - BE CAREFUL -
                                                 Place Anyway can get you banned</label></td>
+                                <td><label for="afterSwitch"
+                                                title="Enable slot after removing captain on leave after battle"><input
+                                                        type="checkbox" id="afterSwitch"> Enable slot on
+                                                leave after</label>
+                                </td>
+                                <td><label for="beforeSwitch"
+                                                title="Enable slot after removing captain on leave before battle"><input
+                                                        type="checkbox" id="beforeSwitch"> Enable slot on
+                                                leave
+                                                before</label></td>
                         </tr>
                         <tr>
                                 <td><label for="liveMasterSwitch"
@@ -220,18 +229,6 @@
                                                         type="checkbox" id="skipIdleMasterSwitch">
                                                 Skip idle switch
                                                 if no masterlist is online</label></td>
-                        </tr>
-                        <tr>
-                                <td><label for="afterSwitch"
-                                                title="Enable slot after removing captain on leave after battle"><input
-                                                        type="checkbox" id="afterSwitch"> Enable slot on
-                                                leave after</label>
-                                </td>
-                                <td><label for="beforeSwitch"
-                                                title="Enable slot after removing captain on leave before battle"><input
-                                                        type="checkbox" id="beforeSwitch"> Enable slot on
-                                                leave
-                                                before</label></td>
                         </tr>
                         <tr>
                                 <td><label><input type="radio" name="loyalty" value="0"> Don't preserve loyalty</label>
