Added auto unit level up

--- a/html/log.html
+++ b/html/log.html
@@ -18,6 +18,7 @@
         <button id="whitelist_button" class="green_button">Filter lists</button>
         <button id="log_button" class="green_button">Log</button>
         <button id="unit_button" class="green_button">Units</button>
+        <button id="level_button" class="green_button">Level-up</button>
         <button id="instructions_button" class="green_button">Instructions</button>
         <button id="key_check_button" class="green_button">Key check</button>
     </div>
