--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
 <head>
     <title>Autoraiders</title>
     <script src="popup.js"></script>
+    <script src="pause.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/popup_styles.css">
 </head>
 <body>
@@ -14,6 +15,7 @@
         <button id="whitelist_button" class="green_button">Filter lists</button>
         <button id="log_button" class="green_button">Log</button>
         <button id="unit_button" class="green_button">Units</button>
+        <button id="level_button" class="green_button">Level Up</button>
         <button id="instructions_button" class="green_button">Instructions</button>
         <button id="key_check_button" class="green_button">Key check</button>
     </div>
