Fix for dungeon slot manager

--- a/html/whitelist.html
+++ b/html/whitelist.html
@@ -49,15 +49,18 @@
             <textarea id="potionlist" name="potionlist"
                 placeholder="captain1 captain2 captain3 captain4"></textarea><br>
 
-            <div><br>The playstyle and rigidness of some captains change when they are doing Dungeons<br>
-                When slot 0 gets set to Dungeons these lists will govern it.<br>
-                Logic remains the same: Dungeon list > Diamond > Gold > Silver > Bronze > Favorites > Any<br>
-                Ignore list will be completely ignored even if there are no other captains available.</div><br>
+            <h3>Dungeons</h3>
+            <div>The playstyle and rigidness of some captains change when they are doing Dungeons<br>
+                When slot 0 gets set to Dungeons, these lists will govern it.<br>
+                Priority logic remains the same: Dungeon list > Diamond > Gold > Silver > Bronze > Favorites > Any<br>
+                Ignore list captains will be completely ignored even if there are no other captains available.</div><br>
             <label>Dungeonlist:</label><br>
-            <textarea id="dungeonlist" name="dungeonlist" placeholder="captain1 captain2 captain3 captain4"></textarea><br>
+            <textarea id="dungeonlist" name="dungeonlist"
+                placeholder="captain1 captain2 captain3 captain4"></textarea><br>
             <br>
             <label>Dungeon blocklist:</label><br>
-            <textarea id="dungeonblocklist" name="dungeonblocklist" placeholder="captain1 captain2 captain3 captain4"></textarea><br>
+            <textarea id="dungeonblocklist" name="dungeonblocklist"
+                placeholder="captain1 captain2 captain3 captain4"></textarea><br>
             <br>
         </div>
     </div>
