added dungeon slot option to unit priority list

--- a/html/units.html
+++ b/html/units.html
@@ -412,6 +412,7 @@
             <input type="radio" name="slot" value="2">Slot 2</input>
             <input type="radio" name="slot" value="3">Slot 3</input>
             <input type="radio" name="slot" value="4">Slot 4</input>
+            <input type="radio" name="slot" value="5">Dungeons</input>
         </div>
         <div id="unitTableContainer"></div><br>
         <h1>THIS OPTION RESETS YOUR CHANGES</h1>
