--- a/settings.html
+++ b/settings.html
@@ -171,6 +171,16 @@
                                         <td></td>
                                 </tr>
                                 <tr>
+                                        <td><label for="priorityListSwitch5"
+                                                        title="When enabled, the unit list for dungeons will be sorted based on the unit priority list."><input
+                                                                type="checkbox" id="priorityListSwitch5">Dungeons</label>
+                                        </td>
+                                        <td><label for="shuffleSwitch5"
+                                                        title="Randomly shuffle your units in dungeons so the placement varies."><input
+                                                                type="checkbox" id="shuffleSwitch5">Dungeons</label></td>
+                                        <td></td>
+                                </tr>
+                                <tr>
                                         <td>
                                                 <div class="x">&nbsp;</div>
                                         </td>
