--- a/html/log.html
+++ b/html/log.html
@@ -7,6 +7,7 @@
     <title>Battle Log</title>
     <script src="/javascript/log.js"></script>
     <script src="/storage_manager.js"></script>
+    <script src="/log_handler.js"></script>
     <script src="/javascript/shared_scripts.js"></script>
     <script src="/popup.js"></script>
     <link rel="stylesheet" type="text/css" href="/styles/styles.css">
