class change for modeChangeSwitch

--- a/settings.html
+++ b/settings.html
@@ -93,7 +93,7 @@
                                                         Use
                                                         legendary
                                                         units</label></td>
-                                        <td><label for="modeChangeSwitch"
+                                        <td><label class="x" for="modeChangeSwitch"
                                                         title="If the captain switches from Dungeons or PVP to a different mode (ex. Dungeons to Campaign, Clash to Duels, etc), they are skipped by default. This option will ignore these mode switches and allow placements to continue as usual."><input
                                                                 type="checkbox" id="modeChangeSwitch"> Allow mode
                                                         change</label></td>
