added switches to log for captainId and dungeonLevel/PVP opponent
also fixed chest count logic and updated removeEntry with logRunning check

--- a/html/log.html
+++ b/html/log.html
@@ -41,8 +41,10 @@
             </div>
             <div>
                 <label for="logSwitch"><input type="checkbox" id="logSwitch">Show rewards and leaderboard</label>
+                <label for="captIdSwitch"><input type="checkbox" id="captIdSwitch">Show captain ID</label>
                 <label for="raidIdSwitch"><input type="checkbox" id="raidIdSwitch">Show raid ID</label>
                 <label for="pendingSwitch"><input type="checkbox" id="pendingSwitch">Show pending</label>
+                <label for="dungeonPVPSwitch"><input type="checkbox" id="dungeonPVPSwitch">Show Dungeon Level/PVP Opponent</label>
             </div>
         </div>
         <h3>Loyalty Chest counter</h3>
