added option to switch to duel asap and updated masterlist switch

--- a/settings.html
+++ b/settings.html
@@ -390,6 +390,12 @@
                                                         only</label>
                                         </td>
                                 </tr>
+                                <tr>
+                                        <td><label for="joinDuelSwitch"
+                                                        title="If a Duel is available, leave the next Campaign battle and join the Duel."><input
+                                                                type="checkbox" id="joinDuelSwitch"> Join Duels ASAP</label>
+                                        </td>
+                                </tr>
                         </tbody>
                 </table>
                 <table width="100%">
