Fixed tooltips and added a dungeon captain flag call

--- a/settings.html
+++ b/settings.html
@@ -485,11 +485,11 @@
                                 </tr>
                                 <tr>
                                         <td><label for="dungeonSlotSwitch"
-                                                        title="Switch to a dungeon as soon as one becomes available"><input
+                                                        title="Switch to a dungeon as soon as a slot becomes available"><input
                                                                 type="checkbox" id="dungeonSlotSwitch">
                                                         Always have a dungeon</label></td>
                                         <td><label for="dungeonSlotOverwrite"
-                                                        title="Switch to a dungeon as soon as one becomes available"><input
+                                                        title="Replace a PvP slot with Dungeons"><input
                                                                 type="checkbox" id="dungeonSlotOverwrite">
                                                         Overwrite PvP with dungeon</label></td>
                                         <td><label for="dungeonSlotSkip"
